css/screen.css
body {
  background: #10202D;
  font: 12px/18px Helvetica, Arial, sans-serif;
  color: #FFF;
	text-shadow: 0px -1px 0px #000;
	position: relative;
}

h1 {
	font-family: 'SteelfishBold';
	font-size: 90px;
	text-transform: uppercase;
	position: relative;
	top: 30px;
	text-shadow: 1px 1px 0px #56694E, 2px 2px 0px #56694E, 3px 3px 0px #56694E;
}

h2 {
	font-size: 20px;
	font-weight: bold;
	line-height: 23px;
	margin-bottom: 5px;
}

h3 {
	font-size: 18px;
	line-height: 24px;
	font-weight: bold;
	color: #5D7D93;
	text-shadow: 1px 1px 0px #1e3240, 2px 2px 0px #1e3240, 3px 3px 0px #1e3240;
	position: relative;
	top: -4px;
}

p {
	color: #969696;
	margin-bottom: 12px;
}

p strong {
	color: #FFF;
}

a {
	color: #DFFF9F;
	text-decoration: none;
}

a:hover {
	text-decoration: none;
}

strong { font-weight: bold; }


/* Utilities */
.autoclear:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
.autoclear		 { display: inline-block; }
.autoclear		 { display: block; }

.inner { width: 768px; margin: auto; }
.left { width: 174px; padding-right: 18px; float: left; }
.right { width : 558px; padding-left: 18px; float: right; }


#header {
	padding: 52px 18px 36px;
	margin: 0 0 36px;
	background: #0a1721;
  box-shadow:inset 0 -5px 36px rgba(0,0,0,0.3);
	-moz-box-shadow:inset 0 -5px 36px rgba(0,0,0,0.3);
  -webkit-box-shadow:inset 0 -5px 36px rgba(0,0,0,0.3);
	border-bottom: 1px solid rgba(255,255,255,0.1);
}

#header .inner { padding: 0 18px; }

#container {
	width: 804px;
	margin: 0 auto 36px;
	border-top: 1px solid #0a1721;
	border-bottom: 1px solid #1b2a37;
}

.section {
	padding: 36px 18px;
	border-top: 1px solid #1b2a37;
	border-bottom: 1px solid #0a1721;
}

code {
	display: block;
	padding: 18px 36px;
	background: #0a1721;
	font-family: 'monaco', monospace;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	-moz-box-shadow:inset 0 5px 10px rgba(0,0,0,0.3);
  -webkit-box-shadow:inset 0 5px 10px rgba(0,0,0,0.3);
  box-shadow:inset 0 5px 10px rgba(0,0,0,0.3);	
	border: 1px solid rgba(0,0,0,0.5);
}

code b { color: #DFFF9F; }
code i { color: #666; font-style: italic; line-height: inherit; }

.description {
	margin: 12px 0 0;
}

#footer {
	margin: 36px;
}

#footer a img {
	display: block;
	width: auto; height: auto;
	margin: auto;
}

